Make the logo a bit smaller on smaller screens, Fixes #630

--- a/scss/partials/_banner_image.scss
+++ b/scss/partials/_banner_image.scss
@@ -39,7 +39,7 @@
     padding: 0.75em 0;
 
     h1 {
-      font-size: clamp(1.7rem, 7vw, 3.052rem);
+      font-size: clamp(1.7rem, 6vw, 3.052rem);
       margin-bottom: 0.3em;
     }
     p,
